# nucleo_agent

./: CMakeLists.txt  package.xml
.github/workflows/: CI_Check.yml  build_pkgs.yml
include/: bfcobs.hpp
msg/: ActuatorCommands.msg  OdometerData.msg  SensorStates.msg
scripts/: set_version.lua
src/: bfcobs2.hpp  nucleo_agent.cpp  rp_encoder_agent.cpp  scheduler.hpp
udevrules/: 59-serialAutoPermssionSetting.rules  60-NWRC-udev.rules
